fixed todo and table word wrap

--- a/src/app.css
+++ b/src/app.css
@@ -77,20 +77,27 @@ body {
 .app .todos .todo {
   margin-top: 0.8em;
   width: 20em;
-  height: 2em;
   background-color: white;
+  /*height: 2em;*/
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
   border-radius: 6px;
   padding: 5px;
- 
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   text-align: center;
   
 }
+.app .todos .todo .left{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-
+.app .todos .todo .left input{
+  width: 35px;
+}
 .app .todos .todo .left label{
   margin-left: 5px;
   font-size: larger;
@@ -98,8 +105,8 @@ body {
   font-style: normal;
   color: grey;
   margin-right: 4px;
-  
- 
+  max-width:220px;
+  word-wrap:break-word
 }
 
 .active h4{
@@ -110,7 +117,12 @@ body {
 .active table{
   overflow-x: scroll;
   background: white;
-  
+  max-width: 100vw;
+}
+.active table tbody tr td,
+.removed table tbody tr td {
+  max-width:150px;
+  word-wrap:break-word
 }
 .shadow-3.accordion-button{
   min-width: 305px;
@@ -118,5 +130,5 @@ body {
   font-weight: 400;
   align-items: center;
   justify-content: center;
-  max-width: 325px;
+  max-width: 90%;
 }
